--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": ".env/bin/python",
+    "python.pythonPath": "/home/brenden/Documents/McHacks/.env/bin/python",
     "python.formatting.provider": "autopep8"
 }
